cmake_minimum_required(VERSION 2.6)
set(SOURCE_FILES Producer_Consumer.cpp)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${DEP_ROOT}/include)
include_directories(${DEP_ROOT}/include/apr-1)
include_directories(${PROJECT_ROOT_DIRECTORY}/src/common)
link_directories(${DEP_ROOT}/lib)
add_executable(producer_consumer Producer_Consumer.cpp)
target_link_libraries(producer_consumer common pthread dl)
